Fixed tweet text overflow to underneath the avatar. [bug 629110]

--- a/media/css/customercare.css
+++ b/media/css/customercare.css
@@ -201,6 +201,7 @@ div.warning-box {
     color: #69645b;
     font-size: 14px;
     font-weight: normal;
+    margin: 0 0 0 63px;
     width: 550px;
 }
 
